fixed vertical-align wms layer text

--- a/less/layerselector.less
+++ b/less/layerselector.less
@@ -223,7 +223,14 @@
         box-sizing: border-box;
         width: 100%;
         text-align: left;
-        padding-left: 2 * @g4u-desktop-padding;
+        padding-left: 2 * @g4u-mobile-padding;
+      }
+
+      .button {
+        vertical-align: middle;
+        line-height: @g4u-mobile-button-size;
+        padding-bottom: 0;
+        padding-top: 0;
       }
 
       .g4u-layerselector-content {
@@ -317,7 +324,7 @@
           .changeIconBefore(@g4u-layerselector-menu-collapsed-icon; @g4u-mobile-normal-fontsize);
         }
       }
-      // styling of active buttons
+
       .g4u-layerselector-layerbutton {
         margin-top: @g4u-mobile-padding;
         .buttonWithIconBefore(@g4u-whitespace-icon; @g4u-mobile-button-size; @g4u-mobile-normal-fontsize);
@@ -325,11 +332,19 @@
         min-height: @g4u-mobile-button-size; // hotfix
         padding-top: @g4u-desktop-padding; // hotfix
         padding-bottom: @g4u-desktop-padding; // hotfix
+
+        &.button {
+          padding-bottom: 0;
+          padding-top: 0;
+        }
+
+        // styling of active buttons
         &.g4u-layerselector-menu-active {
           background: @g4u-active-normal-button-color;
         }
       }
 
+      // styling of active buttons
       .g4u-layerselector-menu-active {
         > .g4u-layerselector-menu-titlebutton {
           background: @g4u-active-normal-button-color;
